Corrige value do select de setor para enviar apenas o nome do setor

--- a/public/index.html
+++ b/public/index.html
@@ -149,12 +149,12 @@
           <label for="tipo">🏢 Setor</label>
           <select id="tipo" name="Setor" required>
             <option value="" hidden selected>Escolha uma opção</option>
-            <option>🖥️ T.I</option>
-            <option>🧾 FISCAL</option>
-            <option>💰 FINANCEIRO</option>
-            <option>💼 COMERCIAL</option>
-            <option>🚚 LOGISTICA</option>
-            <option>🛒 COMPRAS</option>
+            <option value="T.I">🖥️ T.I</option>
+            <option value="FISCAL">🧾 FISCAL</option>
+            <option value="FINANCEIRO">💰 FINANCEIRO</option>
+            <option value="COMERCIAL">💼 COMERCIAL</option>
+            <option value="LOGISTICA">🚚 LOGISTICA</option>
+            <option value="COMPRAS">🛒 COMPRAS</option>
           </select>
         </div>
       </div>
